@@ -162,6 +162,12 @@
       "modifyEncryptionSchemeOnLogin": false
     },
     "passwordValidationRules": {
+      "breachDetection": {
+        "enabled": true,
+        "notifyUserEmailTemplateId": "e6c74b53-d43d-471e-ae7e-906456d0f341",
+        "matchMode": "High",
+        "onLogin": "Off"
+      },
       "maxLength": 256,
       "minLength": 8,
       "rememberPreviousPasswords": {
@@ -170,7 +176,8 @@
       },
       "requireMixedCase": true,
       "requireNonAlpha": true,
-      "requireNumber": true
+      "requireNumber": true,
+      "validateOnLogin": false
     },
     "themeId": "c6ad3fac-6f32-4db7-91a4-061ff035e871",
     "userDeletePolicy": {
