@@ -246,6 +246,27 @@ For example, if `tooManyAttempts` is set to `5` and you fail to authenticate `4`
 |[field]#tenants``[x]``.passwordEncryptionConfiguration.modifyEncryptionSchemeOnLogin# [type]#[Boolean]# [since]#Available Since 1.8.0#
 |When enabled a user's hash configuration will be modified to match these configured settings. This can be useful to increase a password hash strength over time or upgrade imported users to a more secure encryption scheme after an initial import.
 
+|[field]#tenants``[x]``.passwordValidationRules.breachDetection.enabled# [type]#[Boolean]# [since]#Available Since 1.15.0#
+|Whether to enable Reactor breach detection. Requires an activated license.
+
+|[field]#tenants``[x]``.passwordValidationRules.breachDetection.matchMode# [type]#[String]# [since]#Available Since 1.15.0#
+|The level of severity where Reactor will consider a breach. The following are valid values:
+
+* `High` Only requires a password match, this is the most secure and is recommended
+* `Medium` Exact match on username, email address or email sub-address
+* `Low` Exact match on an email or username, or the password is a common breached value
+
+|[field]#tenants``[x]``.passwordValidationRules.breachDetection.notifyUserEmailTemplateId# [type]#[UUID]# [since]#Available Since 1.15.0#
+|The id of the email template to use when notifying user of breached password.
+
+|[field]#tenants``[x]``.passwordValidationRules.breachDetection.onLogin# [type]#[String]# [since]#Available Since 1.15.0#
+|The behavior when detecting breaches at time of user login. The following are valid values:
+
+* `Off` Do not perform breach detection at login
+* `RecordOnly` Only record the result, take no action
+* `NotifyUser` Notify the end user via email
+* `RequireChange` Require immediate password change
+
 |[field]#tenants``[x]``.passwordValidationRules.maxLength# [type]#[Integer]# [since]#Available Since 1.8.0#
 |The maximum length of a password when a new user is created or a user requests a password change.
 
@@ -266,6 +287,9 @@ For example, if `tooManyAttempts` is set to `5` and you fail to authenticate `4`
 
 |[field]#tenants``[x]``.passwordValidationRules.requireNumber# [type]#[Boolean]# [since]#Available Since 1.8.0#
 |Whether to force the user to use at least one number.
+
+|[field]#tenants``[x]``.passwordValidationRules.validateOnLogin# [type]#[Boolean]# [since]#Available Since 1.15.0#
+|When enabled the user's password will be validated during login. If the password does not meet the currently configured validation rules the user will be required to change their password.
 
 |[field]#tenants``[x]``.themeId# [type]#[UUID]# [since]#Available Since 1.8.0#
 |The unique Id of the theme to be used to style the login page and other end user templates.
