@@ -21,6 +21,8 @@ include::docs/v1/tech/__database-migration-warning.adoc[]
 * FusionAuth Reactor &#8482;. FusionAuth Reactor is available with all paid editions of FusionAuth. The feature in the Reactor suite will be breached password detection.
 * New event
 ** `user.password.breach`
+* New Tenant configuration
+** `tenant.passwordValidationRules.validateOnLogin` - When enabled the user's password will be validated during login. If the password does not meet the currently configured validation rules the user will be required to change their password
 
 === Fixed
 
